# hproxy

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
CMake/: Utilities.cmake
Scripts/: BuildAll.cmd  GenerateProject-VS2015-x64.cmd  RegenerateProject-VS2015-x64.cmd
Sources/: CMakeLists.txt  hsocks.cpp
Sources/Public/: hsocks.h
